syntax = "proto3";
package pt.ulisboa.tecnico.classes.contract;

import "google/protobuf/timestamp.proto";

// Classes System Definitions

message Address {
  string host = 1;
  int32 port = 2;
}

message Student {
  string studentId = 1;
  string studentName = 2;
  google.protobuf.Timestamp timestamp = 3;

}

message ClassState {
  int32 capacity = 1;
  bool openEnrollments = 2;
  repeated Student enrolled = 3;
  repeated Student discarded = 4;
}

message VectorClockState {
  map<int32,int32> vectorClock = 2;
}

enum ResponseCode {
  OK = 0;
  NON_EXISTING_STUDENT = 1;
  FULL_CLASS = 2;
  STUDENT_ALREADY_ENROLLED = 3;
  ENROLLMENTS_ALREADY_OPENED = 4;
  ENROLLMENTS_ALREADY_CLOSED = 5;
  INACTIVE_SERVER = 6;
  WRITING_NOT_SUPPORTED = 7;
  SERVER_NOT_UPDATED = 8;
}
